# pinger

./: docker-compose.yml  package-lock.json  package.json
client/: Dockerfile  index.html
client/src/: App.jsx
pinger/: package-lock.json  package.json  tailwind.config.ts
pinger/prisma/: schema.prisma
pinger/prisma/migrations/20241124140106_init/: migration.sql
pinger/src/app/login/: page.tsx
pinger/src/app/signup/: page.tsx
server/: .gitignore  Cargo.toml  Dockerfile  index.js
server/controllers/: auth.controller.js  user.controller.js
server/migrations/: 20250219172603_create_tables.sql  20250220134016_update_create_tables.sql
server/models/: user.model.js
server/routes/: auth.routes.js  user.routes.js
server/src/: main.rs
server/src/db/: pool.rs
server/src/models/: model.rs  user_model.rs
server/src/routes/: mod.rs  user.rs
server/src/routes/handlers/: mod.rs  user_handler.rs
server/src/utils/: constants.rs  db.rs
server/utils/: redisConnection.js  schedular.js  verifyToken.js
