[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = "1.0.197"
serde_json = "1.0.1"
env_logger = "0.11.3"
dotenv = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
tokio = { version = "1.42", features = ["full"] }

[[bin]]
name = "server"
path = "src/main.rs"